bug fix for blank page on fresh installs, tighter error log security obfuscation
bug fix for blank page on fresh installs, tighter error log security obfuscation

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5397,6 +5397,21 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 
 
+-------------------------------------------------------------------
+5.14.3:
+
+-BUG FIX: Fixed blank screen on FRESH install of server edition / linux desktop edition
+
+-Tighter security obfuscation in error logs for file / directory paths
+
+v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
+VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
+MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
+
+-------------------------------------------------------------------
+
+
+
 
 
 
