initial support (work-in-progress) for plugins to have graphical interfacing
initial support (work-in-progress) for plugins to have graphical interfacing

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5429,6 +5429,25 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 
 
+-------------------------------------------------------------------
+5.15.0:
+
+-Graphical interface capability for plugins
+
+-Admin area for configuring plugins (work-in-progress)
+
+-Hooks for where plugins display in the user interface
+
+-debt-tracker plugin
+
+v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
+VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
+MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
+
+-------------------------------------------------------------------
+
+
+
 
 
 
