--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5499,13 +5499,15 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Admin category 'loading...' messages fixed to work properly
 
--BUG FIX: When manually restoring charts from backups, file permissions are adjusted automatically
+-BUG FIX: When manually restoring charts from backups, file permissions are adjusted automatically (if possible)
 
--BUG FIX: Proper "auto-detecting" light (interval) chart updating better when restoring from older archival data (overwriting archival data and having light charts detect that change)
+-BUG FIX: Proper "auto-detecting" light (interval) chart updating better, when restoring from archival data (having light charts detect that change)
 
 -BUG FIXES: Edge-case / Miscellaneous
 
 -Tightened file permission defaults (on linux systems)
+
+-New developer links on the resources page
 
 -Miscellaneous user experience improvements
 
