--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5501,7 +5501,7 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: When manually restoring charts from backups, file permissions are adjusted automatically (if possible)
 
--BUG FIX: Proper "auto-detecting" light (interval) chart updating better, when restoring from archival data (having light charts detect that change)
+-BUG FIX: Proper "auto-detecting" light (time period) chart updating better, when restoring from archival data (having light charts detect that change)
 
 -BUG FIXES: Edge-case / Miscellaneous
 
@@ -5512,6 +5512,8 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 -Miscellaneous user experience improvements
 
 -Housekeeping / code cleanup and optimization
+
+v5.15.1 and higher resets light (time period) charts ONCE AFTER UPGRADING FROM v5.15.0 AND EARLIER VERSIONS
 
 v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
 VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
