debugging / optimizing / notes
debugging / optimizing / notes

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -61,6 +61,8 @@ ADMIN IFRAME BUILDOUT NOTES:
 
 -TODO: CURRENT admin config should be BACKED-UP #RIGHT BEFORE# UPDATING VIA THE INTERFACE (after a validity check), IN CASE THE END-USER WANTS / NEEDS TO REVERT TO LAST KNOWN WORKING CONFIG
 
+-TODO: Build the HTML rendering CONFIGs for each admin config setting's fields, based off initial work at the top off the file: /templates/interface/desktop/php/admin/admin-sections/developer.php
+
 
 ```````````````````````````````````````````````````````````````````````````````````````````````````````````````
 
