--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -67,6 +67,9 @@ ADMIN IFRAME BUILDOUT NOTES:
 ```````````````````````````````````````````````````````````````````````````````````````````````````````````````
 
 
+Add a temp var called $beta_v6_admin_pages = 'on|off' at the top of init.php for v6.00.0, with a warning that enabling it may cause buggy behavior, and save the setting as a cache file in the cache vars folder. Add it on the first admin page shown after login, as a radio button field.
+
+
 To avoid having the "re-enter /start" telegram error message unless truly needed, take an md5 digest of all telegram settings concatenated together, and save as a var in the vars cache folder. Only run a telegram setting update if this md5 digest ever changes.
 
 
