--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5599,9 +5599,17 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 -------------------------------------------------------------------
 5.15.5:
 
+-BUG FIX: OKex (now re-branded OKX) needed and API upgrade, markets are now working again
+
 -BUG FIX: Fixed default maximum-allowed execution time (in Desktop Editions), so emulated cron jobs / scheduled tasks don't timeout before completion
 
--Emulated cron jobs / scheduled tasks (on Desktop Editions) is more reliable with file lock logic (to prevent more than one instance from running, if also viewed in a normal web browser)
+-BUG FIX: Fixed file-lock logic for sending comm messages (email / telegram / text / alexa) in the message queue, as PHP's flock() function is un-reliable
+
+-Emulated cron jobs / scheduled tasks (on Desktop Editions) are more reliable with file-lock logic (to prevent more than one instance from running, IF also viewed in a normal web browser on localhost port 22345)
+
+-Miscellaneous minor bug fixes
+
+-Market cleanup in default demo config
 
 v5.15.1 and higher resets light (time period) charts ONCE AFTER UPGRADING FROM v5.15.0 AND EARLIER VERSIONS
 
