--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -72,7 +72,7 @@ $ct_conf = $ct_gen->refresh_cached_ct_conf($ct_conf, 'upgrade_checks'); at the e
 [2022-08-03 03:30:40] ui => conf: ct_conf data could not be restored from last-known working config;  
 
 
-Test turning password protection on/off on the interface (NOT admin area), since the location of the logic has been changed.
+Test turning password protection on/off on the interface (NOT admin area), I messed with it BUT changed it back.
 
 
 To avoid having the "re-enter /start" telegram error message unless truly needed, take an md5 digest of all telegram settings concatenated together, and save as a var in the vars cache folder. Only run a telegram setting update if this md5 digest ever changes.
