--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -72,6 +72,12 @@ $ct_conf = $ct_gen->refresh_cached_ct_conf($ct_conf, 'upgrade_checks'); at the e
 [2022-08-03 03:30:40] ui => conf: ct_conf data could not be restored from last-known working config;  
 
 
+Build auto-detection into the second system chart, so it knows if it should skip rendering a blank second chart (when there is no data within it's range). 
+
+
+The "Hide / Show" menus in System charts need auto-detection to skip items in that side menu that have no data on the current system (example: "Load Average 15 Minutes" on Windows).
+
+
 Test turning password protection on/off on the interface (NOT admin area), I messed with it BUT changed it back.
 
 
